# grpcSamples

./: .gitattributes  .gitignore  .gitmodules  AI_NODE_ENHANCEMENTS.md  AVALONIA.md  AVALONIA_INTEGRATION.md  AVALONIA_SUBMODULES_ANALYSIS.md  AVALONIA_TAB_DESIGN.md  AllHands.md  BUG_TEST_REPORT.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  DEVELOPMENT_SETUP.md  ENGINEERING_DISCIPLINE.md  ENGINEERING_DISCIPLINE_GENERIC.md  ENGINEERING_DISCIPLINE_v1_backup.md  ENGINEERING_DISCIPLINE_v3.md  ENHANCED_PROMPT.md  ESSENTIAL_DISCIPLINE.md  GOD.md  GOD_MENTOR_ANALYSIS.md  GRIND_MODE_COMPLETE.md  GRPC_WEB_BUILD.md  HUMAN_USER_GUIDE.md  ICON_EXTRACTION_SUCCESS_REPORT.md  ICON_EXTRACTION_SUMMARY.md  ICON_SYSTEM_DELIVERABLES.md  ICON_SYSTEM_VERIFIED.md  IMPROVED_MISSION_PROMPT.md  LICENSE  LINUX_BUILD_SUCCESS.md  MODERN_RENDERING_ENHANCEMENTS.md  MSVC_BUILD_FIXES.md  NODE_INSPECTOR_PLAN.md  NODE_INSPECTOR_REDESIGN_PLAN.md  NODE_STYLING_UPDATE.md  OBJECTPTR_TYPE_CONVERSION_GUIDE.md  OCTANEWEB2_ARCHITECTURE.md  OCTANEWEB2_COMPONENT_MAP.md  OCTANEWEB2_IMPLEMENTATION_CHECKLIST.md  (+73 more)
proxy/: CMakeLists.txt  README_PORTS.md  apianimationtimetransform_pb2.py  apianimationtimetransform_pb2_grpc.py  apibinaryfile_pb2.py  apibinaryfile_pb2_grpc.py  apicaches_pb2.py  apichangemanager_pb2_grpc.py  apicheckbox_pb2.py  apicheckbox_pb2_grpc.py  apicombobox_pb2.py  apicombobox_pb2_grpc.py  apidialogfeedback_pb2.py  apifilechooser_pb2.py  apigaussiansplatting_pb2_grpc.py  apigeometryexporter_pb2.py  apigridlayout_pb2_grpc.py  apiguicomponent_pb2_grpc.py  apiimagebuffer_pb2.py  apiimagecomponent_pb2_grpc.py  apiimageinfo_pb2.py  apiitemarray_pb2_grpc.py  apilogmanager_pb2_grpc.py  apimaterialx_pb2_grpc.py  apimoduledata_pb2.py  apimoduledata_pb2_grpc.py  apimodulenodegraph_pb2.py  apinetrendermanager_pb2.py  apinetrendermanager_pb2_grpc.py  apiplugin_pb2.py  apiplugin_pb2_grpc.py  apiprojectmanager_pb2.py  apirender_pb2.py  apirender_pb2_grpc.py  apisceneexporter_pb2_grpc.py  apiselectionmanager_pb2_grpc.py  apitimesampling_pb2.py  apitimesampling_pb2_grpc.py  apititlecomponent_pb2.py  apiwindow_pb2_grpc.py  (+15 more)
sdk/: CMakeLists.txt  apicaches.h  apichangemanager.h  apicheckbox.h  apicollapsiblepanelstack.h  apicolor.h  apicolorswatch.h  apicombobox.h  apicustomcurveeditorcontroller.h  apidiagnostics.h  apifilename.h  apigeometryexporter.h  apigridlayout.h  apiguicomponent.h  apiimagecomponent.h  apiinfo.h  apiitemarray.h  apilabel.h  apilocaldb.h  apilock.h  apimaterialx.h  apimodaldialog.h  apimodule.h  apimoduledata.h  apimouselistener.h  apinetrendermanager.h  apinodearray.h  apinodegrapheditor.h  apinodeinspector.h  apinodesystem.h  apinumericbox.h  apiocioconfig.h  apiociocontextmanager.h  apioutputcolorspaceinfo.h  apipackage.h  apiprogressbar.h  apiprojectmanager.h  apiprojectworkspace.h  apireferencegraph.h  apirender.h  (+73 more)
sdk/grpc-api-examples/: CMakeLists.txt  grpc-api-example-with-wrappers.sln  grpc-api-examples.sln  render-example.sln
sdk/grpc-api-examples/grpcproxy/: CMakeLists.txt  apicontrol.cpp  apicontrol.h  apinodepininfohelper.cpp  apinodepininfohelper.h  callbackservice.cpp  callbackservice.h  grpcmaininterface.h  grpcmodulebase.cpp  grpcmodulebase.h  grpcproxy.vcxproj  grpcproxy.vcxproj.filters  moduleids.h  octanegrpcwrappers.h  stdafx.h
sdk/grpc-api-examples/render-example/: CMakeLists.txt  render-example.cpp  render-example.h  render-example.vcxproj  render-example.vcxproj.filters
sdk/grpc-api-examples/render-example-py/: apichangemanager_pb2.py  apinodesystem_3_pb2.py  apinodesystem_3_pb2_grpc.py  apinodesystem_7_pb2.py  apinodesystem_7_pb2_grpc.py  apiprojectmanager_pb2.py  apirender_pb2.py  apitimesampling_pb2.py  apitimesampling_pb2_grpc.py  callbackstream_pb2.py  callbackstream_pb2_grpc.py  common_pb2.py  octaneenums_pb2.py  octaneids_pb2.py  octaneimageexport_pb2.py  octaneinfos_pb2.py  octaneinfos_pb2_grpc.py  octanereferenceexport_pb2.py  octanerenderpasses_pb2.py  octanetime_pb2.py  render_example.py
sdk/grpc-api-examples/render-example-with-wrappers/: render-example-with-wrappers.vcxproj  render-example-with-wrappers.vcxproj.filters  render-example.cpp
sdk/grpc-api-examples/scripts/: generate_cpp_proto.sh  generate_csharp_proto.sh  generate_node_proto.sh  (+4 more)
shared/: CMakeLists.txt  camera_sync_base.h  camera_sync_direct.cpp  camera_sync_direct.h  camera_sync_livelink.cpp  camera_sync_livelink.h  camera_sync_sdk.cpp  camera_sync_sdk.h  camera_system.cpp  camera_system.h  file_dialog.h  model_loader.h  model_manager.h  shared_rendering.cpp  shared_rendering.h  windows_headers.h
shared/js/: livelink.js  logging.js  shared.js
shared/protos/: CMakeLists.txt  camera_control.grpc.pb.cc  camera_control.grpc.pb.h  camera_control.pb.cc  camera_control.pb.h  generate_protos_linux.sh  generate_protos_windows.sh  livelink.grpc.pb.cc  livelink.grpc.pb.h  livelink.pb.cc  livelink.pb.h
simpleGL/: CMakeLists.txt  demo.cpp  main.cpp  octane_camera_sync.cpp  test_gl.cpp
simpleGlGrpc/: CMakeLists.txt  apicontrol.cpp  apicontrol.h  apimodule.h  apinodepinInfohelper.cpp  apinodepinInfohelper.h  callbackservice.cpp  callbackservice.h  clientcallbackmgr.h  demo.cpp  grpc_camera_sync.cpp  grpc_camera_sync.h  grpc_settings.cpp  grpc_settings.h  grpc_stubs.h  grpcapinodeinfo.h  grpcbase.h  grpcmaininterface.h  grpcmodulebase.h  main.cpp  octane_camera_sync.cpp  octane_camera_sync.h  simpleGlGrpc_test  test_gl.cpp
simpleGlSdk/: CALLBACK_FIX_ANALYSIS.md  CALLBACK_IMPLEMENTATION_SUMMARY.md  CMakeLists.txt  CMakeLists_testbed.txt  INTEGRATION_GUIDE.md  README.md  REAL_CALLBACK_FIXES.md  SHARED_SURFACE_IMPLEMENTATION_PLAN.md  SHARED_SURFACE_IMPLEMENTATION_SUMMARY.md  build_debug.sh  callback_debug.cpp  callback_testbed.cpp  demo.cpp  main.cpp  test_callback_fix.py  test_gl.cpp  verify_callback_implementation.py  verify_shared_surface_implementation.py
testGrpcApi/: ActivityLogger.cpp  ActivityLogger.h  CMakeLists.txt  CMakeLists_fixed.txt  CMakeLists_simple.txt  PerformanceTracker.cpp  PerformanceTracker.h  README.md  WINDOWS_BUILD_GUIDE.md  imgui.ini  main.cpp  main_simple.cpp  test_build
(+1934 files in other folders)
